@@ -6,6 +6,7 @@
 using System.Diagnostics.CodeAnalysis;
 
 [assembly: SuppressMessage("Style", "IDE0090:Use 'new(...)'", Justification = "Decided individually")]
+[assembly: SuppressMessage("Style", "IDE0056:Indexing can be simplified", Justification = "Cannot be used because it is not supported in every targeted platform")]
 [assembly: SuppressMessage("Style", "IDE0057:Use range operator", Justification = "Cannot be used because it is not supported in every targeted platform")]
 [assembly: SuppressMessage("ReSharper", "UseIndexFromEndExpression", Justification = "Cannot be used on all targeted platforms")]
 
